# iotfs-core

./: .gitignore  Doxyfile  README.md
adapters/onvif/: buildall.sh
adapters/onvif/src/: onvif_oic_client.cpp  onvif_oic_server.cpp
demo/oicfanserver/: Blink.cpp  CMakeLists.txt  off.cpp  simpleserver.cpp
demo/script/: change.js  change.py  change.sh  workflow.sh
inc/iotfs/: iotfs.h  iotfs_directory.h  iotfs_file.h  utils.h
inc/iotfs/oic/: iotfs_oic.h  iotfs_oic_directory.h  iotfs_oic_file.h  iotfs_oic_stub.h
inc/plugins/: plugin_manager.h
scripts/: .clang-format  Doxyfile  README  format-code.sh  generate-docs.sh
src/: iotfs.cpp  iotfs_directory.cpp  iotfs_main.cpp  iotfs_stub.cpp  plugin_manager.cpp
src/oic/: activator.cpp  iotfs_oic.cpp  iotfs_oic_directory.cpp  iotfs_oic_file.cpp  iotfs_oic_stub.cpp  iotfs_stub.cpp
src/oic/inc/: iotfs_oic.h  iotfs_oic_directory.h  iotfs_oic_file.h  iotfs_oic_stub.h
